--- a/source/pages/activitysuccess/activitysuccess.wxml
+++ b/source/pages/activitysuccess/activitysuccess.wxml
@@ -4,5 +4,5 @@
     src="{{uploadpath}}resource/{{res.successbaoming}}"
     ></image>
     <view class="f-60" style="margin-top: 72rpx;">报名成功</view>
-    <navigator class="activeback f-32 txt-white" open-type="navigateBack" delta="1" >返回</navigator>
+    <view class="activeback f-32 txt-white" bindtap="navigateto" id="/pages/activity/activity?id={{id}}">返回</view>
 </view>
