--- a/source/pages/myactivity/myactivity.wxss
+++ b/source/pages/myactivity/myactivity.wxss
@@ -4,3 +4,53 @@
     justify-content: center;
     color: rgba(136, 136, 136, 1);
 }
+.fixtop {
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background: #ffffff;
+    padding-top: 40rpx;
+}
+.fw500 {
+    font-weight: 500;
+}
+.typeline {
+    width: 46rpx;
+    height: 4rpx;
+    background: transparent;
+    margin-top: 16rpx;
+}
+.typelist_act {
+    background: #44B549;
+}
+.activeliat{
+    width: 710rpx;
+    height: 258rpx;
+    margin-left: 20rpx;
+    margin-bottom: 20rpx;
+    position: relative;
+}
+.activeimg{
+    width: 93vw;
+    height: 250rpx;
+}
+
+
+.address{
+    width: 120rpx;
+    height: 40rpx;
+    background-color:rgba(255,255,255,0.7);
+    border-radius: 20rpx;
+    position: absolute;
+    right: 5rpx;
+    bottom: 20rpx;
+}
+.sign{
+    width: 35rpx;
+    height: 35rpx;
+}
+.signmene{
+    font-size: 12px;
+} 
