--- a/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxss
+++ b/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxss
@@ -15,3 +15,13 @@
     position: absolute;
     bottom: 70rpx;
 }
+
+.price {
+    margin-right: 32rpx;
+    border-radius: 14rpx;
+    display: inline-block;
+    width: 188rpx;
+    border: 2rpx solid rgba(68, 181, 73, 1);
+    line-height: 120rpx;
+    text-align: center;
+}
