--- a/source/pages/activity/activity.wxml
+++ b/source/pages/activity/activity.wxml
@@ -13,11 +13,10 @@
         <view class="f-28 margin-top-16">活动地点：{{data.sddress}}</view>
         <view class="f-28 margin-top-16">费用：{{data.price}}</view>
         <view class="question padding-top-40">【活动内容】</view>
-        <view class="padding-top-16" style="color: #474545;">
+        <view class="padding-top-16" style="width: 100vw; color: #474545;">
             <!-- <import src="../../wxParse/wxParse.wxml" />
             <template is="wxParse" data="{{wxParseData:content.nodes}}" /> -->
-            <rich-text nodes="{{data.content}}"></rich-text>
-            <view>{{aa}}asda</view>
+            <rich-text style="width: 100vw;" nodes="{{data.content}}"></rich-text>
         </view>
         <view class="question padding-top-40">【报名信息填写】</view>
         <form catchsubmit="formSubmit">
@@ -25,7 +24,7 @@
                 <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
                 <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
                     <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}">
-                        <view wx:if="{{item.value == ''}}" style="width: 100%;">请选择</view> {{item.value}}
+                        <view wx:if="{{item.value == ''}}" style="width: 100%;">请选择</view>
                     </picker>
                     <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
                 </view>
@@ -33,14 +32,14 @@
                     <input name="{{index}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
                 </view>
             </view>
-            <view >
-                <view >
-                    <button   class="btns margin-top-60" formType="submit"  style="display: {{A}};">报名</button>
-                    
+            <view style="display: {{data.baomingjiangtai == 'C' ? 'none' : ''}};">
+                <view>
+                    <button   class="btns margin-top-60" formType="submit" style="display: {{data.baomingid == '' ? 'block' : 'none'}};" 
+                    >报名</button>
+    
                 </view>
-                <view >
-                
-                    <button class="btns margin-top-60" bindtap="removebaoming" style="display: {{B}};">取消报名</button>
+                <view  >
+                    <button class="btns margin-top-60" bindtap="removebaoming" style="display: {{data.baomingid == ''? 'none' : 'block'}};" >取消报名</button>
                 </view>
             </view>
         </form>
