--- a/source/pages/myactivity/myactivity.wxml
+++ b/source/pages/myactivity/myactivity.wxml
@@ -9,7 +9,7 @@
 <view class="height-100"></view>
 
 <view>
-    <view wx:for="{{baominglist}}" wx:key='k' class="activeliat" bindtap="navigateto" bindtap="navigateto" id="/pages/activity/activity?id={{item.id}}">
+    <view wx:for="{{baominglist}}" wx:key='k' class="activeliat" bindtap="navigateto" bindtap="navigateto" id="/pages/activity/activity?id={{item.activity_id}}">
         <view >
         <image src="/images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg" class="activeimg"></image>
         <view class="flex-row flex-center address">
