--- a/source/pages/activity/activity.wxml
+++ b/source/pages/activity/activity.wxml
@@ -6,54 +6,69 @@
                 <image src="{{uploadpath}}activity/{{item.img}}" class="activeimg" bindtap="tobanner" data-item="{{item}}"></image>
             </swiper-item>
         </swiper>
-        <view class="f-36 ">{{data.name}}</view>
+        <view class="f-36 ">{{activityinfo.name}}</view>
         <view class="question padding-top-40">【活动信息】</view>
-        <view class="f-28 margin-top-16">活动时间：{{data.starttime}}-{{data.endtime}}</view>
-        <view class="f-28 margin-top-16">报名时间：{{data.startbaoming}}-{{data.endbaoming}}</view>
-        <view class="f-28 margin-top-16">活动地点：{{data.sddress}}</view>
-        <view class="f-28 margin-top-16">费用：{{data.price}}</view>
+        <view class="f-28 margin-top-16">活动时间：{{activityinfo.starttime}}-{{activityinfo.endtime}}</view>
+        <view class="f-28 margin-top-16">报名时间：{{activityinfo.startbaoming}}-{{activityinfo.endbaoming}}</view>
+        <view class="f-28 margin-top-16">活动地点：{{activityinfo.sddress}}</view>
+        <view class="f-28 margin-top-16">费用：{{activityinfo.price}}</view>
         <view class="question padding-top-40">【活动内容】</view>
-        <view class="padding-top-16" style="width: 100vw; color: #474545;">
-            <!-- <import src="../../wxParse/wxParse.wxml" />
-            <template is="wxParse" data="{{wxParseData:content.nodes}}" /> -->
-            <rich-text style="width: 100vw;" nodes="{{data.content}}"></rich-text>
+        <view class="padding-top-16">
+            <import src="../../wxParse/wxParse.wxml" />
+            <template is="wxParse" data="{{wxParseData:content.nodes}}" />
+            <!-- <rich-text style="width: 100vw;" nodes="{{data.content}}"></rich-text> -->
         </view>
+
+
         <view class="question padding-top-40">【报名信息填写】</view>
-        <form catchsubmit="formSubmit">
+        <view wx:if="{{activityinfo.orderinfo.length==0}}"></view>
+        <form catchsubmit="formSubmit" id="submit">
             <view wx:for="{{question}}" wx:key='k' wx:for-index="index">
                 <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
-                <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
-                    <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}">
-                        <view wx:if="{{item.value == ''}}" style="width: 100%;">请选择</view>
-                    </picker>
-                    <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
+                <view wx:if="{{activityinfo.orderinfolen.length==0}}">
+                    <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
+                        <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}">
+                            <view wx:if="{{item.value == ''}}" style="width: 100%;">请选择</view>
+                        </picker>
+                        <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
+                    </view>
+                    <view wx:else>
+                        <input name="{{index}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
+                    </view>
                 </view>
-                <view wx:else>
-                    <input name="{{index}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
+
+                <view wx:if="{{activityinfo.orderinfolen.length > 0}}">
+                    {{activityinfo.answer[0].answer}}
                 </view>
+
             </view>
-            <!-- <view>{{time}}</view>
-            <view>{{data.cannot}}</view>
-            <view>{{timess}}</view>
-            <view>{{timess < data.cannot ? 'a':'b'}}</view> -->
-            <view style="display: {{data.baomingjiangtai == 'C' ? 'none' : ''}};">
+
+
+
+            <view style="display: {{activityinfo.baomingjiangtai == 'C' ? 'none' : ''}};">
                 <view>
-                    <button   class="btns margin-top-60" formType="submit" style="display: {{data.baomingid == '' ? 'block' : 'none'}};" 
-                    >报名</button>
-    
+                    <button class="btns margin-top-60" formType="submit" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
+
                 </view>
-                <view  wx:if="{{timess < data.cannot}}">
-                    <button  class="btns margin-top-60" bindtap="removebaoming" 
-                    style="display: {{data.baomingid == '' ? 'none' : 'block'}};" 
-                    >取消报名</button>  
+                <view wx:if="{{timess < activityinfo.cannot}}">
+                    <button class="btns margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
                 </view>
                 <view wx:else>
-                    <button disabled="true" class="btns margin-top-60" bindtap="removebaoming" 
-                    style="display: {{data.baomingid == '' ? 'none' : 'block'}};" 
-                    >取消报名</button>
+                    <button disabled="true" class="btns margin-top-60" bindtap="removebaoming" style="display: {{data.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
                 </view>
-                
+
             </view>
         </form>
+
+
+
+
+        <!-- wx:if="{{activityinfo.orderinfo.length >  0}}" -->
+        <view wx:if="{{activityinfo.orderinfo.length >=0}}">
+            <view wx:for="{{activityinfo.answer}}">
+                <view>{{item.answer}}</view>
+            </view>
+        </view>
+
     </view>
 </view>
