--- a/source/pages/giftcards/giftcards.wxml
+++ b/source/pages/giftcards/giftcards.wxml
@@ -10,87 +10,15 @@
 
     <view class="flex-row flex-column" style="display: {{flag == 'A' ? 'block' :'none'}}; position: relative;">
         <view style="margin-bottom: 92rpx; ">
-            <view class="flex-row cards" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo">
-                <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
+            <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo?id={{item.id}}">
+                <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
                 <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥150</view>
+                    <view class="f-32" style="font-weight: 700;">面值￥{{item.price}}</view>
                     <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：150元</view>
-                        <view class="f-24">未使用</view>
+                        <view class="f-24">余额：{{item.yue}}</view>
+                        <view class="f-24">{{item.isuse_name}}</view>
                     </view>
-                    <view class="f-20 explain">自绑定之日起3年内有效</view>
-                </view>
-
-            </view>
-            <view class="flex-row cards">
-                <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
-                <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥150</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：150元</view>
-                        <view class="f-24">已使用</view>
-                    </view>
-                    <view class="f-20 explain">自绑定之日起3年内有效</view>
-                </view>
-
-            </view>
-            <view class="flex-row cards">
-                <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
-                <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥150</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：150元</view>
-                        <view class="f-24">已使用</view>
-                    </view>
-                    <view class="f-20 explain">自绑定之日起3年内有效</view>
-                </view>
-
-            </view>
-            <view class="flex-row cards">
-                <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
-                <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥150</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：150元</view>
-                        <view class="f-24">已使用</view>
-                    </view>
-                    <view class="f-20 explain">自绑定之日起3年内有效</view>
-                </view>
-
-            </view>
-            <view class="flex-row cards">
-                <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
-                <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥150</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：150元</view>
-                        <view class="f-24">已使用</view>
-                    </view>
-                    <view class="f-20 explain">自绑定之日起3年内有效</view>
-                </view>
-
-            </view>
-            <view class="flex-row cards">
-                <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
-                <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥150</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：150元</view>
-                        <view class="f-24">已使用</view>
-                    </view>
-                    <view class="f-20 explain">自绑定之日起3年内有效</view>
-                </view>
-
-            </view>
-            <view class="flex-row cards">
-                <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
-                <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥150</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：150元</view>
-                        <view class="f-24">已使用</view>
-                    </view>
-                    <view class="f-20 explain">自绑定之日起3年内有效</view>
+                    <view class="f-20 explain">{{item.explain}}</view>
                 </view>
 
             </view>
