--- a/source/pages/giftcardsinfo/giftcardsinfo.wxss
+++ b/source/pages/giftcardsinfo/giftcardsinfo.wxss
@@ -9,3 +9,9 @@
     line-height: 44rpx;
     color: rgba(51, 51, 51, 1);
 }
+.but{
+    width: 320rpx;
+    height: 92rpx;
+    border-radius: 48rpx;
+    color: white;
+}
