--- a/source/pages/givegiftcards/givegiftcards.wxss
+++ b/source/pages/givegiftcards/givegiftcards.wxss
@@ -1,1 +1,18 @@
 /* pages/givegiftcards/givegiftcards.wxss */
+/* pages/giftcardsinfo/giftcardsinfo.wxss */
+.img{
+    width: 700rpx;
+    height: 416rpx;
+    border-radius: 32rpx;
+}
+.f{
+    font-size: 28rpx;
+    line-height: 44rpx;
+    color: rgba(51, 51, 51, 1);
+}
+.but{
+    width: 320rpx;
+    height: 92rpx;
+    border-radius: 48rpx;
+    color: white;
+}
