--- a/source/pages/giftcards/giftcards.wxml
+++ b/source/pages/giftcards/giftcards.wxml
@@ -13,7 +13,7 @@
             <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo?id={{item.id}}">
                 <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
                 <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥{{item.price}}</view>
+                    <view class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
                     <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
                         <view class="f-24">余额：{{item.yue}}</view>
                         <view class="f-24">{{item.isuse_name}}</view>
@@ -25,27 +25,28 @@
 
         </view>
         <view class="flex-row  bottombox" style="justify-content:center">
-                <view class="f-24 bottomcontrnt">购买记录</view>
+                <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardbuyjilu/giftcardbuyjilu">购买记录</view>
                 <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
-                <view class="f-24 bottomcontrnt">收送记录</view>
+                <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshousongjilu/giftcardshousongjilu">收送记录</view>
                 <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
-                <view class="f-24 bottomcontrnt">使用记录</view>
+                <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshiyongjilu/giftcardshiyongjilu">使用记录</view>
         </view>
     </view>
+
 
     <view style="display: {{flag == 'B' ? 'block' :'none'}};">
         <view class="flex-row flex-column" style=" background: rgba(255, 255, 255, 1); min-height:90vh; width: 100vw;">
             <view style="width: 645rpx;">
                 <view style="margin-bottom: 180rpx;">
-                    <input style="margin-top: 56rpx;" class="inputbox" type="text" placeholder="请输入卡号" value="" />
-                    <input class="inputbox" type="text" placeholder="请输入卡密" value="" />
+                    <input id="{{}}"  style="margin-top: 56rpx;" bindinput="bindKeyInput" class="inputbox" type="text" placeholder="请输入卡号" value="" />
+                    <input id="{{}}" bindinput="bindPawInput"  class="inputbox" type="text" password placeholder="请输入卡密" value="" />
                     <view class="text">兑换须知</view>
-                    <view style="margin-bottom: 40rpx;">文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案</view>
+                    <view style="margin-bottom: 40rpx;">{{instinfo.cardxuzhi}}</view>
                     <view class="text">使用须知</view>
-                    <view>文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文案文
+                    <view>{{instinfo.cardused}}
                     </view>
                 </view>
-                <button class="pay">确认兑换</button>
+                <button bindtap="giftCardExhange" class="pay">确认兑换</button>
             </view>
 
         </view>
