--- a/source/pages/givegiftcards/givegiftcards.wxml
+++ b/source/pages/givegiftcards/givegiftcards.wxml
@@ -7,7 +7,7 @@
         <view class="f">卡 号：{{cardinfo.exchangecard_id_name}}</view>
         <view class="f">面 值：{{cardinfo.price}}元</view>
         <view class="f">使用须知 ：
-            <rich-text style="width: 100vw;" nodes="{{cardinfo.howuse}}"></rich-text>
+            <!-- <rich-text style="width: 100vw;" nodes="{{cardinfo.howuse}}"></rich-text> -->
             </view>
     </view>
  
